Se modifica  etiqueta parrafo text Resumen del por CURICULUM VITAE

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button type="button">_</button>
                     <button type="button">X</button>
                 </article>
-                <p> RESUME </p>
+                <p> CURRICULUM VITAE </p>
                 <h1>RUBEN SEGOVIA</h1>
             </div>
             <!-- Imagen de curriculo -->
